--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -10,10 +10,11 @@ img {
 }
 
 article h1 {
-  margin-top: -160px;
-  margin-left: 50px;
+  margin-top: -250px;
+  margin-bottom: 200px;
+  margin-left: 70px;
 
-  color: rgb(166, 157, 231);
+  color: rgb(0, 0, 0);
 
   font-family: "PT Sans Caption", sans-serif;
   font-size: 4vw;
@@ -230,6 +231,10 @@ nav a {
   	width: 550px;
   }
 
+  article h1 {
+    font-size: 5vw;
+  }
+
   .menu__box {
     width: 235px;
   }
@@ -266,6 +271,14 @@ nav a {
     margin-left: 50px;
   }
 
+  article h1 {
+    margin-top: -160px;
+    margin-bottom: 100px;
+    margin-left: 40px;
+
+    font-size: 6vw;
+  }
+
   .menu__box {
     background-color: rgba(236, 233, 240);
   }
@@ -276,13 +289,9 @@ nav a {
   }
 
   nav {
+    opacity: 1;
+
     font-size: 3vw;
-  }
-
-  article h1 {
-    margin-top: -100px;
-
-    font-size: 6vw;
   }
 
   article h2 {
@@ -328,9 +337,12 @@ nav a {
   }
 
   article h1 {
-    margin-top: -100px;
+    margin-top: -150px;
+    margin-bottom: 100px;
+    margin-left: 40px;
 
     font-size: 6vw;
+
   }
 
   article h2 {
