--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -133,7 +133,7 @@ body {
 
   list-style: none;
 
-  background-color: rgba(236, 233, 240, 0.6);
+  background-color: rgba(236, 233, 240);
 
 }
 
@@ -169,10 +169,9 @@ body {
 }
 
 nav {
-  top: 50px;
-  left: 10px;
-
   width: 300px;
+  margin-top: 50px;
+  margin-left: 10px;
 
   opacity: 0.05;
 
@@ -232,11 +231,20 @@ nav a {
   }
 
   article h1 {
+    margin-top: -230px;
+    margin-left: 60px;
+
     font-size: 5vw;
   }
 
+  nav {
+    opacity: 1;
+
+    font-size: 2vw;
+  }
+
   .menu__box {
-    width: 235px;
+    width: 350px;
   }
 
   img {
@@ -255,13 +263,81 @@ nav a {
     width: 450px;
   }
 
+  article h1 {
+    margin-top: -190px;
+    margin-bottom: 150px;
+    margin-left: 50px;
+  }
+
   .menu__box {
-    width: 230px;
+    width: 300px;
   }
 
   iframe {
     width: 440px;
     height: 364px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  body {
+    width: 400px;
+  }
+
+  article h2 {
+    font-size: 4vw;
+  }
+
+  article h3 {
+    font-size: 3vw;
+  }
+
+  article p:first-of-type {
+    font-size: 2.6vw;
+  }
+
+  article p {
+    font-size: 2.6vw;
+  }
+
+  p {
+    font-size: 1.5vw;
+  }
+
+  iframe {
+    width: 400px;
+    height: 324px;
+  }
+
+  .menu__box {
+    width: 280px;
+  }
+
+  nav {
+    font-size: 2.5vw;
+  }
+
+  article h1 {
+    margin-top: -175px;
+  }
+}
+
+@media all and (max-width: 500px) {
+  body {
+    width: 350px;
+  }
+
+  iframe {
+    width: 360px;
+    height: 284px;
+  }
+
+  .menu__box {
+    width: 260px;
+  }
+
+  article h1 {
+    margin-top: -160px;
   }
 }
 
@@ -280,16 +356,16 @@ nav a {
   }
 
   .menu__box {
-    background-color: rgba(236, 233, 240);
+    width: 250px;
   }
 
   iframe {
-    width: 300px;
-    height: 224px;
+    width: 340px;
+    height: 264px;
   }
 
   nav {
-    opacity: 1;
+    margin-left: 20px;
 
     font-size: 3vw;
   }
@@ -320,7 +396,6 @@ nav a {
   }
 }
 
-
 @media all and (max-width: 375px) {
   body {
     width: 300px;
@@ -333,7 +408,11 @@ nav a {
   }
 
   nav {
-    font-size: 3vw;
+    font-size: 3.5vw;
+  }
+
+  .menu__box {
+    width: 250px;
   }
 
   article h1 {
@@ -342,7 +421,6 @@ nav a {
     margin-left: 40px;
 
     font-size: 6vw;
-
   }
 
   article h2 {
@@ -368,5 +446,32 @@ nav a {
   .menu__btn {
     top: 10px;
     left: 10px;
+  }
+}
+
+@media all and (max-width: 320px) {
+  body {
+    width: 250px;
+    margin-left: 50px;
+  }
+
+  article h1 {
+    margin-top: -130px;
+    margin-left: 30px;
+  }
+
+  .menu__box {
+    width: 250px;
+  }
+
+  nav {
+    margin-left: 10px;
+
+    font-size: 4vw;
+  }
+
+  iframe {
+    width: 240px;
+    height: 164px;
   }
 }
