--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -105,7 +105,7 @@ body {
   width: 100%;
   height: 2px;
 
-  background-color: #616161;
+  background-color: rgb(0, 0, 0);
 }
 .menu__btn > span::before {
   top: -8px;
